# paperroach

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_PIPELINE.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  kb.example.toml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
kb/: __init__.py  __main__.py  chunk.py  cli.py  config.py  figures.py  ingest.py  knowledge.py  llm.py  models.py  obsidian.py  ollama_client.py  organize.py  pipeline.py  rag.py  store.py  tags.py  taxonomy.py  zotero.py
kb/templates/: kb.example.toml
paperroach/: __init__.py  __main__.py
scripts/: smoke_wheel.py
tests/: test_build_commit_order.py  test_chunk.py  test_cli.py  test_config.py  test_content_dedupe.py  test_figures.py  test_gc.py  test_hash_ledger.py  test_knowledge.py  test_llm_classification.py  test_obsidian.py  test_organize.py  test_pipeline_inputs.py  test_pipeline_lock.py  test_rag.py  test_refile.py  test_smoke_build_rag.py  test_store.py  test_tags.py  test_taxonomy.py  test_zotero.py
