[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperroach"
version = "0.1.0"
description = "Local-first paper knowledge pipeline for Obsidian, Zotero, Ollama, and LanceDB"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "UJAM Studio" }]
dependencies = [
    "ollama>=0.4.0",
    "lancedb>=0.13.0",
    "pyarrow>=15.0.0",
    "pymupdf4llm>=0.0.17",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# OCR for scanned PDFs (no text layer). CPU, ONNX-based, offline.
ocr = ["rapidocr-onnxruntime>=1.3.0"]
# Optional, higher-quality PDF parsing backend (see ingest.py).
docling = ["docling>=2.0.0"]
# Math-aware ingestion (ingester = "nougat"): real LaTeX equations. Needs a
# CUDA torch (cu121 index) and pinned deps — see README "Notes & upgrade paths".
nougat = [
    "nougat-ocr",
    "transformers==4.38.2",
    "albumentations==1.3.1",
    "timm==0.5.4",
    "pypdfium2==4.20.0",
]

[project.scripts]
paperroach = "kb.cli:main"
kb = "kb.cli:main"

[tool.setuptools.packages.find]
include = ["kb*", "paperroach*"]

[tool.setuptools.package-data]
kb = ["templates/*.toml"]
